Infrastructure: Updating build to support Java 21 (LTS)